fix style bug with phtotos bootcamp  effect on mobile

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -227,5 +227,4 @@ ABOUT */
 
 #sec-past-events .other-programs {
   display: flex;
-  z-index: -200;
 }
