--- a/css/mobile.css
+++ b/css/mobile.css
@@ -43,13 +43,9 @@
 }
 
 .hamb-toggle.active {
-  /* background-color: rgb(39, 39, 143); */
   background-image: url("/IMG/cross-ham.svg");
   background-size: 60%;
 }
-/* .cross {
-  display: none;
-} */
 
 .hamb-toggle img {
   background-size: 89%;
@@ -66,10 +62,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* background: white; */
   background: url("/IMG/bg-mobile.jpg");
-  /* background-repeat: no-repeat; */
-  /* background-size: cover; */
   background-position: right top;
   background-size: contain;
   position: fixed;
@@ -79,13 +72,10 @@
 
 .primary-menu-box {
   align-self: stretch;
-  /* padding-left: 17vw; */
   display: flex;
   flex-direction: column;
   padding: 15px;
   gap: 10px;
-  /* justify-content: center; */
-  /* align-items: center; */
 }
 
 .primary-menu-box ul {
@@ -134,12 +124,7 @@
   background-color: white;
   transition: all 0.7s linear;
   width: 80%;
-  /* margin-left: -600px; */
 }
-
-/* .activeV {
-  margin-left: 0px;
-} */
 
 .primary-menu-box-content li:hover {
   transform: scale(1.1);
